--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
 											<div class="mu-featured-tours-single-info">
 												<h3>Kolam renang</h3>
 												<h4> Pertama</h4>
-												<span class="mu-price-tag">LAH</span>
+												<span class="mu-price-tag"></span>
 												<p>Kolam renang yan gbisa dipilih sesuai dengna kedalaman masing-masing.</p>
 												<a href="#" class="mu-book-now-btn">View</a>
 											</div>
@@ -178,7 +178,7 @@
 											<div class="mu-featured-tours-single-info">
 												<h3>Seluncuran waterboom</h3>
 												<h4> kedua</h4>
-												<span class="mu-price-tag">LAH</span>
+												<span class="mu-price-tag"></span>
 												<p>Wahana yang dimiliki yaitu diantaranya tempat prosotan yang mantap.</p>
 												<a href="#" class="mu-book-now-btn">View</a>
 											</div>
@@ -187,11 +187,11 @@
 
 									<div class="col-md-4">
 										<div class="mu-featured-tours-single">
-											<img src="assets/images/france.jpg" alt="img">
+											<img src="assets/images/thailand.jpg" alt="img">
 											<div class="mu-featured-tours-single-info">
 												<h3>Kolam anak</h3>
 												<h4> Ketiga</h4>
-												<span class="mu-price-tag">lahh</span>
+												<span class="mu-price-tag"></span>
 												<p>Bukan berarti kolamnya beranak, tetapi kolam untuk anak!</p>
 												<a href="#" class="mu-book-now-btn">View</a>
 											</div>
